crates/ferrum-interfaces/tests/ui/vnext/fail/operation_oracle_request_is_not_deserialize.rs
use ferrum_interfaces::vnext::OperationOracleRequest;

fn main() {
    let _: OperationOracleRequest = serde_json::from_str("{}").unwrap();
}
